# UOR-CS1PR16-Programming-Final-Coursework-Maze

./: .gitignore  README.md  autogen.txt
harrypotter/: CMakeLists.txt  Defaults.h  HarryProject.dev  HarryProject.layout  Makefile.win  Move.h  S.txt  WindowConfigs.h  inner.txt  logs.txt  main.cpp  testlogs.txt
harrypotter/Coordinate/: Coordinate.cpp  Coordinate.h
harrypotter/DisplaySystem/InfoBoard/: Info.cpp  Info.h  InfoBoard.cpp  InfoBoard.h
harrypotter/DisplaySystem/LeaderBoard/: LeaderBoard.cpp  LeaderBoard.h
harrypotter/DisplaySystem/LogArea/: LogArea.cpp  LogArea.h
harrypotter/DisplaySystem/Window/: Window.cpp  Window.h
harrypotter/Errors/: AllPlayersAreKilledException.h  IndexOutOfBoundsException.h
harrypotter/GameBoard/: GameBoard.cpp  GameBoard.h
harrypotter/Ghost/: Ghost.cpp  Ghost.h
harrypotter/Ghost/DummyGhost/: DummyGhost.cpp  DummyGhost.h
harrypotter/Ghost/SmartGhost/: SmartGhost.cpp  SmartGhost.h
harrypotter/Ghost/SmartGhost/Graph/: Graph.cpp  Graph.h
harrypotter/GhostInfo/: GhostInfo.cpp  GhostInfo.h
harrypotter/ManualPlayer/: ManualPlayer.cpp  ManualPlayer.h
harrypotter/Map/: Map.cpp  Map.h  MeleMap01.txt  MeleMap02.txt  e.txt  e_2.txt  inner.txt  logs.txt
harrypotter/Map/backuo/: Map.cpp  Map.h
harrypotter/ObjectInfo/: ObjectInfo.cpp  ObjectInfo.h
harrypotter/Player/: Player.cpp  Player.h
harrypotter/PlayerInfo/: PlayerInfo.cpp  PlayerInfo.h
harrypotter/StupidPlayer/: StupidPlayer.cpp  StupidPlayer.h
harrypotter/Utilities/: ArrayList.h  FileReader.cpp  FileReader.h  Record.cpp  Record.h
maze/: CMakeLists.txt  main.cpp
maze/App/GraphicsModule/: Graphics.cpp  Graphics.h
maze/App/Logger/: Logger.cpp  Logger.h
maze/App/MainLoop/: MainLoop.cpp  MainLoop.h
maze/App/Object/: Object.h
maze/App/ProjectFactory/: Factory.h  ObjectFactory.h
maze/App/RawMap/: MapException.h  Notification.h  RawMap.cpp  RawMap.h  Utils.h
maze/App/RuleEngine/: GenericRuleException.h  Rule.h  RuleEngine.cpp  RuleEngine.h
maze/Tests/: AbstractTest.h  TestModule.h
(+26 files in other folders)
